// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio matches snapshot when not selected 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "borderWidth": 2,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
      Object {
        "borderColor": "#484a4c",
      },
    ]
  }
/>
`;

exports[`Radio matches snapshot when selected 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 10,
        "borderWidth": 2,
        "height": 20,
        "justifyContent": "center",
        "width": 20,
      },
      Object {
        "borderColor": "#14d64d",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 6,
          "height": 12,
          "width": 12,
        },
        Object {
          "backgroundColor": "#14d64d",
        },
      ]
    }
  />
</View>
`;
